--- a/webapp/ulucidity/html/Ulucidity-card-body.html
+++ b/webapp/ulucidity/html/Ulucidity-card-body.html
@@ -70,6 +70,11 @@
                       <tr>
                       <td align="center">
                           <font size="7"><a href="Ulucidity-home.html">ulucidity</a></font>
+                          <!--&nbsp;&nbsp;&nbsp;&nbsp;
+                          <font size="7">_</font>
+                          &nbsp;&nbsp;&nbsp;&nbsp;
+                          <font size="7">X</font-->
+                          <!--font size="6">ds/dt = 0</font-->
                       </td>
                       <tr>
                       </tr>
