--- a/webapp/ulucidity/html/Ulucidity-create-vstudio-form.html
+++ b/webapp/ulucidity/html/Ulucidity-create-vstudio-form.html
@@ -59,6 +59,12 @@
     <option value="/ulucidity-cgi/cgi">cgi parameters &nbsp;&nbsp; (/ulucidity-cgi/cgi)</option>
     <option value="/ulucidity-cgi/cgicatch">catch cgi parameters &nbsp;&nbsp; (/ulucidity-cgi/cgicatch)</option>
     <option value=""/>
+    <option value=""></option>
+    <option value="/ulucidity/application/templates/t/VisualStudio/application-code-workspace.t">application VisualStudioCode workspace (/ulucidity/application/templates/t/VisualStudio/application-code-workspace.t)</option>
+    <option value=""></option>
+    <option value="/ulucidity/application/templates/t/t/parameters.t">application t parameters &nbsp;&nbsp; (/ulucidity/application/templates/t/t/parameters.t)</option>
+    <option value="/ulucidity/application/templates/t/t/functions.t">application t functions &nbsp;&nbsp; (/ulucidity/application/templates/t/t/functions.t)</option>
+    <option value=""></option>
     </select>
     <br/>
 
