--- a/webapp/ulucidity/html/Ulucidity-dropdown.html
+++ b/webapp/ulucidity/html/Ulucidity-dropdown.html
@@ -29,9 +29,11 @@
     <a class="dropdown-item" href="Ulucidity-create-makefile.html">create makefile project</a>
     <a class="dropdown-item" href="Ulucidity-create-cxx.html">create c/c++ file</a>
     <a class="dropdown-item" href="Ulucidity-create-html.html">create .html file</a>
+    <a class="dropdown-item" href="Ulucidity-create-css.html">create .css file</a>
+    <a class="dropdown-item" href="Ulucidity-create-js.html">create .js file</a>
     <a class="dropdown-item" href="Ulucidity-create-t.html">create .t file</a>
     <a class="dropdown-item" href="Ulucidity-tools.html">tools</a>
     <a class="dropdown-item" href="Ulucidity-home.html">home</a>
     <a class="dropdown-item" href="Ulucidity-card-home.html">card</a>
-    <a class="dropdown-item" href="/ulucidity/">/ulucidity/</a>
+    <a class="dropdown-item" href="/source/ulucidity/">/ulucidity/</a>
 </div>
