--- a/webapp/ulucidity/html/Ulucidity-popdown.html
+++ b/webapp/ulucidity/html/Ulucidity-popdown.html
@@ -44,15 +44,31 @@
 
     <!--
     =====================================================================
-    === Ulucidity
+    === umachinae
     =====================================================================
     -->
-    <td name="myPopover" class="popover-buttons"><a href="Ulucidity-card-home.html">
+    <td name="myPopover" class="popover-buttons"><a href="/umachinae/html/uMachinae-home.html">
     <table class="footer-logo"><tr><td>
-        <table class="footer-logo-square">
-            <tr><td class="footer-logo-frame">
-                <table class="footer-logo-frame-label">
-                    <tr><td class="footer-logo-frame-label-text">ulucidity</td></tr>
+        <table class="footer-logo-icon">
+            <tr><td class="footer-logo-icon-image" style="background-image:url('../images/png/uMachinae.png')">
+                <table class="footer-logo-label">
+                    <tr><td class="footer-logo-label-text">UMACHINAE</td></tr>
+                </table>
+            </td></tr>
+        </table>
+    </td></tr></table></a></td>
+
+    <!--
+    =====================================================================
+    === vmachinae
+    =====================================================================
+    -->
+    <td name="myPopover" class="popover-buttons"><a href="/vmachinae/html/VMachinae-home.html">
+    <table class="footer-logo"><tr><td>
+        <table class="footer-logo-icon">
+            <tr><td class="footer-logo-icon-image" style="background-image:url('../images/png/VMachinae.png')">
+                <table class="footer-logo-label">
+                    <tr><td class="footer-logo-label-text">VMACHINAE</td></tr>
                 </table>
             </td></tr>
         </table>
@@ -62,7 +78,23 @@
     =====================================================================
     === Ulucidity
     =====================================================================
-    -->
+    -- >
+    <td name="myPopover" class="popover-buttons"><a href="Ulucidity-card-home.html">
+    <table class="footer-logo"><tr><td>
+        <table class="footer-logo-square">
+            <tr><td class="footer-logo-frame">
+                <table class="footer-logo-frame-label">
+                    <tr><td class="footer-logo-frame-label-text">ulucidity</td></tr>
+                </table>
+            </td></tr>
+        </table>
+    </td></tr></table></a></td-->
+
+    <!--
+    =====================================================================
+    === Ulucidity
+    =====================================================================
+    -- >
     <td name="myPopover" class="popover-buttons"><a href="Ulucidity-card.html">
     <table class="footer-logo"><tr><td>
         <table class="footer-logo-square">
@@ -72,7 +104,7 @@
                 </table>
             </td></tr>
         </table>
-    </td></tr></table></a></td>
+    </td></tr></table></a></td-->
 
     </tr><tr>
 
@@ -175,7 +207,6 @@
     </td></tr></table></a></td>
 
     </tr><tr>
-
     <!--
     =====================================================================
     === medusade
@@ -229,7 +260,7 @@
     =====================================================================
     === medusade
     =====================================================================
-    -- >
+    -->
     <td name="myPopover" class="popover-buttons"><a href="/medusade/html/Medusade.html">
     <table class="footer-logo" border="0"><tr><td>
         <table class="footer-logo-icon">
@@ -239,7 +270,7 @@
                 </table>
             </td></tr>
         </table>
-    </td></tr></table></a></td-->
+    </td></tr></table></a></td>
 
     <!--
     =====================================================================
@@ -259,31 +290,15 @@
 
     <!--
     =====================================================================
-    === vmachinae
+    === Asteraede
     =====================================================================
     -->
-    <td name="myPopover" class="popover-buttons"><a href="/vmachinae/html/VMachinae-home.html">
+    <td name="myPopover" class="popover-buttons"><a href="/asteraede/html/Asteraede-home.html">
     <table class="footer-logo"><tr><td>
         <table class="footer-logo-icon">
-            <tr><td class="footer-logo-icon-image" style="background-image:url('../images/png/VMachinae.png')">
+            <tr><td class="footer-logo-icon-image" style="background-image:url('/asteraede/images/png/Asteraede.png')">
                 <table class="footer-logo-label">
-                    <tr><td class="footer-logo-label-text">VMACHINAE</td></tr>
-                </table>
-            </td></tr>
-        </table>
-    </td></tr></table></a></td>
-
-    <!--
-    =====================================================================
-    === umachinae
-    =====================================================================
-    -->
-    <td name="myPopover" class="popover-buttons"><a href="/umachinae/html/uMachinae-home.html">
-    <table class="footer-logo"><tr><td>
-        <table class="footer-logo-icon">
-            <tr><td class="footer-logo-icon-image" style="background-image:url('../images/png/uMachinae.png')">
-                <table class="footer-logo-label">
-                    <tr><td class="footer-logo-label-text">UMACHINAE</td></tr>
+                    <tr><td class="footer-logo-label-text">Asteraede</td></tr>
                 </table>
             </td></tr>
         </table>
